--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,13 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to #{title}. This site is designed for you to send an anonymous note. Once this note is entered in, someone within a certain geofenced location will have the ability to view your notes.
+
+block text
+  textarea(name: 'text', rows: '250', columns: '500')
+  br
+  hr
+  br
+
+block submit
+  button.btn Click to submit!
