--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,13 @@ doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/bootstrap/css/bootstrap-responsive.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(href='https://fonts.googleapis.com/css?family=Open+Sans', rel='stylesheet', type='text/css')
+    link(rel)
   body
     block content
     block text
     block submit
+    block testBootstrap
